@@ -1,3 +1,8 @@
+2006-04-07  Luc Pionchon  <luc.pionchon@nokia.com>
+
+	* hildon-widgets/hildon-banner.c: added gtk-doc Since markers.
+
+
 2006-04-07  Tomas Junnonen  <tomas.junnonen@nokia.com>
 
  	- Added support for Pango markup
